WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64093
[Qt][WK2] Views should know about WebProcess crash/relaunch.
https://bugs.webkit.org/show_bug.cgi?id=64093
Summary
[Qt][WK2] Views should know about WebProcess crash/relaunch.
Andreas Kling
Reported
2011-07-07 08:46:43 PDT
The crash/relaunch callbacks should propagate through the ViewInterface.
Attachments
Proposed patch
(7.33 KB, patch)
2011-07-07 08:56 PDT
,
Andreas Kling
benjamin
: review+
benjamin
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-07-07 08:56:09 PDT
Created
attachment 99988
[details]
Proposed patch
Benjamin Poulain
Comment 2
2011-07-07 09:44:45 PDT
Comment on
attachment 99988
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=99988&action=review
> Source/WebKit2/UIProcess/API/qt/qdesktopwebview.cpp:229 > + isCrashed = false;
Don't you need to update here?
> Source/WebKit2/UIProcess/qt/QtWebPageProxy.cpp:548 > setDrawingAreaSize(m_viewInterface->drawingAreaSize()); > - > - m_isConnectedToEngine = true; > + m_viewInterface->didRelaunchProcess();
I would invert the order of those calls. :)
Andreas Kling
Comment 3
2011-07-07 10:28:37 PDT
Committed
r90572
: <
http://trac.webkit.org/changeset/90572
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug