[Qt][WK2] Views should know about WebProcess crash/relaunch. https://bugs.webkit.org/show_bug.cgi?id=64093

Reviewed by Benjamin Poulain.

Add processDidCrash() and didRelaunchProcess() to ViewInterface.

QDesktopWebView now displays a simple sad smiley ":(" when the
web process crashes.

* UIProcess/API/qt/qdesktopwebview.cpp:
(QDesktopWebViewPrivate::QDesktopWebViewPrivate):
(paintCrashedPage):
(QDesktopWebView::paint):
(QDesktopWebViewPrivate::processDidCrash):
(QDesktopWebViewPrivate::didRelaunchProcess):
* UIProcess/API/qt/qdesktopwebview_p.h:
* UIProcess/qt/QtWebPageProxy.cpp:
(QtWebPageProxy::QtWebPageProxy):
(QtWebPageProxy::didRelaunchProcess):
(QtWebPageProxy::processDidCrash):
* UIProcess/qt/QtWebPageProxy.h:
* UIProcess/qt/TouchViewInterface.cpp:
(WebKit::TouchViewInterface::showContextMenu):
(WebKit::TouchViewInterface::hideContextMenu):
(WebKit::TouchViewInterface::processDidCrash):
(WebKit::TouchViewInterface::didRelaunchProcess):
* UIProcess/qt/TouchViewInterface.h:
* UIProcess/qt/ViewInterface.h:


Canonical link: https://commits.webkit.org/79837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90572 268f45cc-cd09-0410-ab3c-d52691b4dbfc